# local-audio-segmenter

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PARAMETER_GUIDE.md  README_TESTING.md  README_UV.md  TRANSCRIPT_DRIVEN_APPROACH.md  test-coverage-and-guidelines.md  test-strategy.md
docs/archived/: ARCHITECTURE.md  IMPLEMENTATION_DIAGRAM.md  configuration_README.md
examples/configurations/archived/: academic_lecture.yaml  church_service_custom.yaml
examples/scripts/: profile_management_demo.py
scripts/: setup.sh
src/audio/: loader.py
src/cli/: main.py
src/stt/: __init__.py  module.py  transcript.py
tests/: __init__.py  conftest.py  test_audio_loader.py  test_bridge_merger.py  test_energy_classifier.py  test_gap_merger.py  test_integration.py  test_stt_module.py
tools/: build_segments_from_transcript.py  export_segments.py  transcribe_audio.py
